fix(core): align input shadows to be the same as for buttons

--- a/core/src/components/cat-textarea/cat-textarea.scss
+++ b/core/src/components/cat-textarea/cat-textarea.scss
@@ -56,9 +56,10 @@ textarea {
   background: cat-token('color.ui.background.input');
   border-radius: cat-border-radius('m');
   border: none;
-  box-shadow: 0 0 0 1px cat-token('color.ui.border.dark');
+  box-shadow: inset 0 0 0 1px rgb(var(--border-color));
   transition: box-shadow cat-token('time.transition.s') linear;
   resize: vertical;
+  --border-color: #{cat-token('color.ui.border.dark', $wrap: false)};
 
   &:disabled {
     background: cat-token('color.ui.background.muted');
@@ -67,24 +68,17 @@ textarea {
     resize: none;
   }
 
-  .textarea-invalid & {
-    box-shadow: 0 0 0 1px cat-token('color.theme.danger.bg', 0.2);
-  }
-
-  &:hover:not(:disabled) {
-    box-shadow: 0 0 0 2px cat-token('color.ui.border.dark');
-  }
-
-  .textarea-invalid &:hover:not(:disabled) {
-    box-shadow: 0 0 0 2px cat-token('color.theme.danger.bg', 0.2);
+  &:not(:disabled):hover {
+    box-shadow: inset 0 0 0 1px rgb(var(--border-color)), 0 0 0 1px rgb(var(--border-color));
   }
 
   &:focus {
     outline: 2px solid cat-token('color.ui.border.focus');
+    outline-offset: -1px;
   }
 
-  .textarea-invalid &:focus {
-    outline: 2px solid cat-token('color.theme.danger.bg', 0.2);
+  .textarea-invalid & {
+    --border-color: #{cat-token('color.theme.danger.bg', 0.2, $wrap: false)};
   }
 
   &::placeholder {
